--- a/src/components/CustomContainer/style.css
+++ b/src/components/CustomContainer/style.css
@@ -6,7 +6,6 @@
     border-radius: 30px;
     background-color: #fff; /* Default background */
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1); /* Default box shadow */
-    overflow: hidden;
     margin: 0 auto; /* Centered if needed */
     transition: box-shadow 0.3s ease;
   }
