--- a/src/pages/AdminDashboard/style.css
+++ b/src/pages/AdminDashboard/style.css
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    overflow: auto;
   }
   
   /* ===== IP Card ===== */
@@ -17,6 +18,7 @@
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     padding: 15px;
     transition: all 0.3s ease;
+    overflow: auto;
     cursor: pointer; /* Make the card clickable */
   }
   
